<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".ui.view.MainActivity">

   <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintActionBar"
      android:layout_width="match_parent"
      android:layout_height="?android:attr/actionBarSize"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <com.google.android.material.textview.MaterialTextView
         android:id="@+id/city_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:padding="4dp"
         android:text="@string/moscow"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />

      <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/arrow_down_img"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:src="@drawable/ic_arrow_down"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/city_name_tv"
         app:layout_constraintTop_toTopOf="parent" />

      <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/qr_code_img"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_qr"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />


   </androidx.constraintlayout.widget.ConstraintLayout>

   <androidx.coordinatorlayout.widget.CoordinatorLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/constraintActionBar">


      <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:backgroundTint="@android:color/transparent">

         <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.viewpager2.widget.ViewPager2
               android:id="@+id/container_vp2"
               android:layout_width="380dp"
               android:layout_height="112dp"
               android:layout_marginStart="16dp" />

         </com.google.android.material.appbar.CollapsingToolbarLayout>

         <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="58dp">

            <com.google.android.material.chip.Chip
               android:id="@+id/chip"
               style="@style/Widget.MaterialComponents.Chip.Choice"
               android:layout_width="88dp"
               android:layout_height="54dp"
               android:layout_marginStart="16dp"
               android:checked="true"
               android:text="@string/pizza"
               android:textAlignment="center"
               android:textColor="@color/chip_background_text"
               android:textSize="17sp"
               app:chipBackgroundColor="@color/chip_background"
               app:chipCornerRadius="6dp"
               app:singleSelection="true"
               tools:text="@string/pizza" />

            <com.google.android.material.chip.Chip
               android:id="@+id/chip1"
               android:layout_width="88dp"
               android:layout_height="54dp"
               android:text="@string/combo"
               android:textAlignment="center"
               android:textColor="@color/chip_background_text"
               android:textSize="17sp"
               app:chipBackgroundColor="@color/chip_background"
               app:chipCornerRadius="6dp"
               tools:text="@string/combo" />

            <com.google.android.material.chip.Chip
               android:id="@+id/chip2"
               android:layout_width="88dp"
               android:layout_height="58dp"
               android:text="@string/desserts"
               android:textAlignment="center"
               android:textColor="@color/chip_background_text"
               android:textSize="17sp"
               app:chipBackgroundColor="@color/chip_background"
               app:chipCornerRadius="6dp"
               tools:text="@string/desserts" />

            <com.google.android.material.chip.Chip
               android:id="@+id/chip3"
               android:layout_width="88dp"
               android:layout_height="58dp"
               android:text="@string/drinks"
               android:textAlignment="center"
               android:textColor="@color/chip_background_text"
               android:textSize="17sp"
               app:chipBackgroundColor="@color/chip_background"
               app:chipCornerRadius="6dp"
               tools:text="@string/drinks" />
         </com.google.android.material.chip.ChipGroup>


      </com.google.android.material.appbar.AppBarLayout>

      <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">

         <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/data_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/data_item" />

      </androidx.core.widget.NestedScrollView>


   </androidx.coordinatorlayout.widget.CoordinatorLayout>

   <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


   <com.google.android.material.bottomnavigation.BottomNavigationView
      android:id="@+id/bottomNavigationView"
      android:layout_width="match_parent"
      android:layout_height="58dp"
      app:itemIconTint="@drawable/nav_item_color_state"
      app:itemTextColor="@drawable/nav_item_color_state"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:menu="@menu/bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>